# masVersion

./: .gitignore  CMakeLists.txt  README.md
CLI/: index.html  svnMasVersion.sh  svnMasVersion2Csv.sh  svnMasVersion2Html.sh
masVersion/: CMD  ModuleOwnersList  Untitled-1.cpp  _clang-format  abortwin.cpp  abortwin.h  abortwin.ui  clang-format  default.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  masVersion.pro  setwin.cpp  setwin.h  setwin.ui  平台模块名称编号对照表.txt  平台模块名称负责人对照表.txt
